# nix-ros-base

./: .gitignore  README.md  flake-registry.json  flake.nix  hydra.nix  nix.conf  pyproject.toml  report.xml
.github/workflows/: build.yml  generate.yml  pytest.yml
colcon/: bash.nix  catkin-sphinx.nix  default.nix  defaults.nix  document.nix  mixin.nix  notification.nix  output.nix  parallel-executor.nix  pydoctor.nix  ros-python.nix
flags/: colcon-home.nix  default.nix  flags.txt
lib/: build-colcon-package-docs.nix  build-colcon-package-testing.nix  build-colcon-package.nix  build-colcon-workspace.nix  catkin-test-data.nix  catkin-test-data.py  default.nix  develop-shell-info.nix  develop-shell-prevent-mix.nix  fetch-gitlab.nix  fetchdeb.nix  make-colcon-hook.nix  pkg-src.nix  propagate-colcon-run-depends.nix  quiet-symlink-join.nix
lib/build-support/: separate-debug-info.sh
lib/execfind/: list.py
lib/flake-overlay/: default.nix  flake-overlay-generator  flake.nix.em
lib/flake-overlay/test_data/: freeze_output.json
lib/setup/: README.md  generate-sh.py  local_setup_util_sh.py
nix_generator/: cli.py  defaults.py  hydra.py  hydra_cli.py  rosdeps.py  writer.py
nix_generator/templates/: README.md  flake.nix.em  github-workflows-build.yml  package-default.nix.em  package.nix.em  src-default.nix.em  src.nix.em
overrides/: default.nix  noetic.nix  rolling.nix
pkgs/: clang-tools-versioned.nix  default.nix  gtest-src.nix
tests/: test_hydra.py  test_sanitize_ref.py
