[tool.poetry]
name = "nix-generator"
version = "0.1.0"
description = ""
authors = ["Mike Purvis <mpurvis@clearpath.ai>"]

[tool.poetry.scripts]
generate = 'nix_generator.cli:main'
hydra = 'nix_generator.hydra_cli:main'

[[tool.poetry.source]]
name = "clearpath-pypi"
url = "http://pypi.clearpathrobotics.com/simple/"

[tool.poetry.dependencies]
python = "^3.8"
empy = "^3.3.4"
PyYAML = "^6.0"
httpx = "^0.20.0"
rich = "^12.3.0"
pydpkg = "^1.6.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^7.1.1"
# https://github.com/psf/black/issues/2964 locking click version here to avoid issues when running black.
click = "8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
